# kubernetes-version-exporter

./: Cargo.toml  Dockerfile
.github/workflows/: publish.yaml
deploy/chart/: Chart.yaml  values.yaml
deploy/chart/templates/: deployment.yaml  podmonitor.yaml
src/: lib.rs  main.rs
