[package]
name = "kubernetes-version-exporter"
version = "0.1.2"
edition = "2018"

[dependencies]
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.9"
actix-web-prom = { git = "https://github.com/nlopes/actix-web-prom.git", branch = "nlopes/0.6.0-beta.1" }
futures = "0.3.17"
prometheus = { version = "0.12.0", features = ["process"] }
kube = "0.60.0"
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_22"] }
